zinc_machine/_build/parser.output
   0  $accept : %entry% $end

   1  main : EOL
   2       | ENDEXPR
   3       | OPEN FILE_NAME ENDEXPR
   4       | let_defs ENDEXPR
   5       | seq_list ENDEXPR
   6       | type_declaration ENDEXPR

   7  identifier : IDENT
   8             | LPAREN operators_name RPAREN

   9  int_atom : INT

  10  atoms : UNDERSCORE
  11        | LPAREN RPAREN
  12        | identifier
  13        | int_atom
  14        | TRUE
  15        | FALSE
  16        | CONSTRUCTOR
  17        | LBRACKET RBRACKET
  18        | LPAREN atoms COLON types_tuple RPAREN

  19  operators_name : PREFIX_OP
  20                 | INFIX_OP_REF
  21                 | INFIX_OP_0
  22                 | INFIX_OP_1
  23                 | INFIX_OP_2
  24                 | INFIX_OP_3
  25                 | INFIX_OP_4

  26  pattern_list_expr_decl : pattern_list_expr_decl SEQ pattern_with_constr
  27                         | pattern_with_constr

  28  pattern_list_expr : pattern_with_constr LISTINSERT pattern_with_constr
  29                    | LBRACKET pattern_list_expr_decl RBRACKET

  30  pattern_without_constr : atoms
  31                         | LPAREN pattern_tuple RPAREN

  32  pattern_with_constr : pattern_without_constr
  33                      | pattern_list_expr
  34                      | CONSTRUCTOR pattern_without_constr

  35  pattern_tuple : pattern_tuple_aux

  36  pattern_tuple_aux : pattern_with_constr
  37                    | pattern_with_constr COMMA pattern_tuple_aux

  38  fun_args_def : RPAREN CONSTRUCTOR pattern_without_constr LPAREN
  39               | pattern_without_constr
  40               | fun_args_def RPAREN CONSTRUCTOR pattern_without_constr LPAREN
  41               | fun_args_def pattern_without_constr

  42  expr_atom : atoms
  43            | REF expr_atom
  44            | array_type
  45            | LPAREN prog RPAREN
  46            | LPAREN prog SEQ seq_list RPAREN
  47            | LBRACKET list_expr_decl RBRACKET

  48  list_expr_decl : list_expr_decl SEQ expr_atom
  49                 | expr_atom

  50  funccall : expr_atom
  51           | funccall expr_atom

  52  let_defs : LET pattern_tuple EQUAL seq_list
  53           | LET REC identifier EQUAL seq_list
  54           | LET identifier fun_args_def EQUAL seq_list
  55           | LET REC identifier fun_args_def EQUAL seq_list
  56           | LET identifier fun_args_def COLON types_tuple EQUAL seq_list
  57           | LET pattern_tuple COLON types_tuple EQUAL seq_list

  58  arithmetics_expr : prog PLUS prog
  59                   | prog TIMES prog
  60                   | prog DIV prog
  61                   | prog MINUS prog
  62                   | prog OR prog
  63                   | prog AND prog
  64                   | prog SLT prog
  65                   | prog LT prog
  66                   | prog SGT prog
  67                   | prog GT prog
  68                   | MINUS prog
  69                   | prog NEQUAL prog
  70                   | prog EQUAL prog
  71                   | prog INFIX_OP_4 prog
  72                   | prog INFIX_OP_3 prog
  73                   | prog INFIX_OP_REF prog
  74                   | prog INFIX_OP_2 prog
  75                   | prog INFIX_OP_1 prog
  76                   | prog INFIX_OP_0 prog
  77                   | prog LISTINSERT prog

  78  seq_list : prog
  79           | prog SEQ seq_list

  80  prog : arithmetics_expr
  81       | PRINTIN prog
  82       | AMAKE prog
  83       | FUN fun_args_def ARROW seq_list
  84       | let_defs IN seq_list
  85       | IF prog THEN prog
  86       | IF prog THEN prog ELSE prog
  87       | BEGIN seq_list END
  88       | TRY seq_list WITH E expr_atom ARROW seq_list
  89       | MATCH prog WITH match_list
  90       | prog REFLET prog
  91       | RAISE prog
  92       | BANG prog
  93       | NOT prog
  94       | PREFIX_OP prog
  95       | funccall
  96       | tuple
  97       | array_type ARRAYAFFECTATION prog

  98  match_list : pattern_tuple ARROW prog
  99             | DISJ pattern_tuple ARROW prog
 100             | match_list DISJ pattern_tuple ARROW prog

 101  array_type : LPAREN prog RPAREN DOT LPAREN prog RPAREN
 102             | identifier DOT LPAREN prog RPAREN

 103  tuple : prog COMMA prog
 104        | tuple COMMA prog

 105  polymorphic_type : POL_TYPE

 106  types_atoms : INT_TYPE
 107              | BOOL_TYPE
 108              | UNIT_TYPE
 109              | polymorphic_type

 110  types_tuple : types_tuple_aux

 111  types_tuple_aux : types
 112                  | types_tuple_aux TIMES types

 113  types : types_atoms ARRAY_TYPE
 114        | types_atoms REF
 115        | types_atoms
 116        | types ARROW types
 117        | LPAREN types_tuple RPAREN
 118        | types_params

 119  types_params : IDENT
 120               | types IDENT
 121               | LPAREN types_params_aux RPAREN IDENT

 122  types_params_aux : types_tuple COMMA types_tuple
 123                   | types_params_aux COMMA types_tuple

 124  types_params_def : IDENT
 125                   | polymorphic_type IDENT
 126                   | LPAREN types_params_def_aux RPAREN IDENT

 127  types_params_def_aux : polymorphic_type COMMA polymorphic_type
 128                       | types_params_def_aux COMMA polymorphic_type

 129  constructor_declaration : CONSTRUCTOR OF types_tuple
 130                          | CONSTRUCTOR

 131  type_declaration_list : constructor_declaration
 132                        | DISJ constructor_declaration
 133                        | type_declaration_list DISJ constructor_declaration

 134  type_declaration : TYPE types_params_def EQUAL types_tuple
 135                   | TYPE types_params_def EQUAL type_declaration_list

 136  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (136)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	ENDEXPR  shift 12
	REF  shift 13
	EOL  shift 14
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	OPEN  shift 24
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	TYPE  shift 28
	.  error

	main  goto 29
	let_defs  goto 30
	seq_list  goto 31
	type_declaration  goto 32
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 38
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	int_atom : INT .  (9)

	.  reduce 9


state 4
	identifier : IDENT .  (7)

	.  reduce 7


state 5
	identifier : LPAREN . operators_name RPAREN  (8)
	atoms : LPAREN . RPAREN  (11)
	atoms : LPAREN . atoms COLON types_tuple RPAREN  (18)
	expr_atom : LPAREN . prog RPAREN  (45)
	expr_atom : LPAREN . prog SEQ seq_list RPAREN  (46)
	array_type : LPAREN . prog RPAREN DOT LPAREN prog RPAREN  (101)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	RPAREN  shift 42
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	INFIX_OP_0  shift 43
	INFIX_OP_1  shift 44
	INFIX_OP_2  shift 45
	INFIX_OP_3  shift 46
	INFIX_OP_4  shift 47
	INFIX_OP_REF  shift 48
	PREFIX_OP  shift 49
	.  error

	let_defs  goto 50
	identifier  goto 33
	operators_name  goto 51
	int_atom  goto 34
	atoms  goto 52
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 53
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 6
	prog : BEGIN . seq_list END  (87)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	.  error

	let_defs  goto 50
	seq_list  goto 54
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 38
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 7
	let_defs : LET . pattern_tuple EQUAL seq_list  (52)
	let_defs : LET . REC identifier EQUAL seq_list  (53)
	let_defs : LET . identifier fun_args_def EQUAL seq_list  (54)
	let_defs : LET . REC identifier fun_args_def EQUAL seq_list  (55)
	let_defs : LET . identifier fun_args_def COLON types_tuple EQUAL seq_list  (56)
	let_defs : LET . pattern_tuple COLON types_tuple EQUAL seq_list  (57)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 55
	REC  shift 56
	CONSTRUCTOR  shift 57
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LBRACKET  shift 58
	.  error

	identifier  goto 59
	int_atom  goto 34
	atoms  goto 60
	pattern_with_constr  goto 61
	pattern_list_expr  goto 62
	pattern_without_constr  goto 63
	pattern_tuple  goto 64
	pattern_tuple_aux  goto 65


state 8
	prog : IF . prog THEN prog  (85)
	prog : IF . prog THEN prog ELSE prog  (86)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	.  error

	let_defs  goto 50
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 66
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 9
	prog : FUN . fun_args_def ARROW seq_list  (83)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 55
	RPAREN  shift 67
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LBRACKET  shift 68
	.  error

	identifier  goto 69
	int_atom  goto 34
	atoms  goto 60
	pattern_without_constr  goto 70
	fun_args_def  goto 71


state 10
	prog : TRY . seq_list WITH E expr_atom ARROW seq_list  (88)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	.  error

	let_defs  goto 50
	seq_list  goto 72
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 38
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 11
	arithmetics_expr : MINUS . prog  (68)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	.  error

	let_defs  goto 50
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 73
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 12
	main : ENDEXPR .  (2)

	.  reduce 2


state 13
	expr_atom : REF . expr_atom  (43)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	REF  shift 13
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LBRACKET  shift 26
	.  error

	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 74
	array_type  goto 75


state 14
	main : EOL .  (1)

	.  reduce 1


state 15
	prog : RAISE . prog  (91)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	.  error

	let_defs  goto 50
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 76
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 16
	prog : BANG . prog  (92)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	.  error

	let_defs  goto 50
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 77
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 17
	prog : NOT . prog  (93)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	.  error

	let_defs  goto 50
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 78
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 18
	prog : PRINTIN . prog  (81)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	.  error

	let_defs  goto 50
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 79
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 19
	prog : AMAKE . prog  (82)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	.  error

	let_defs  goto 50
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 80
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 20
	atoms : CONSTRUCTOR .  (16)

	.  reduce 16


state 21
	atoms : UNDERSCORE .  (10)

	.  reduce 10


state 22
	atoms : TRUE .  (14)

	.  reduce 14


state 23
	atoms : FALSE .  (15)

	.  reduce 15


state 24
	main : OPEN . FILE_NAME ENDEXPR  (3)

	FILE_NAME  shift 81
	.  error


state 25
	prog : MATCH . prog WITH match_list  (89)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	.  error

	let_defs  goto 50
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 82
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 26
	atoms : LBRACKET . RBRACKET  (17)
	expr_atom : LBRACKET . list_expr_decl RBRACKET  (47)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	REF  shift 13
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	RBRACKET  shift 83
	LBRACKET  shift 26
	.  error

	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 84
	array_type  goto 75
	list_expr_decl  goto 85


state 27
	prog : PREFIX_OP . prog  (94)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	.  error

	let_defs  goto 50
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 86
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 28
	type_declaration : TYPE . types_params_def EQUAL types_tuple  (134)
	type_declaration : TYPE . types_params_def EQUAL type_declaration_list  (135)

	IDENT  shift 87
	LPAREN  shift 88
	POL_TYPE  shift 89
	.  error

	polymorphic_type  goto 90
	types_params_def  goto 91


state 29
	%entry% : '\001' main .  (136)

	.  reduce 136


state 30
	main : let_defs . ENDEXPR  (4)
	prog : let_defs . IN seq_list  (84)

	IN  shift 92
	ENDEXPR  shift 93
	.  error


state 31
	main : seq_list . ENDEXPR  (5)

	ENDEXPR  shift 94
	.  error


state 32
	main : type_declaration . ENDEXPR  (6)

	ENDEXPR  shift 95
	.  error


state 33
	atoms : identifier .  (12)
	array_type : identifier . DOT LPAREN prog RPAREN  (102)

	DOT  shift 96
	INT  reduce 12
	IDENT  reduce 12
	LPAREN  reduce 12
	RPAREN  reduce 12
	END  reduce 12
	ELSE  reduce 12
	THEN  reduce 12
	IN  reduce 12
	COLON  reduce 12
	COMMA  reduce 12
	ARROW  reduce 12
	WITH  reduce 12
	PLUS  reduce 12
	TIMES  reduce 12
	MINUS  reduce 12
	EQUAL  reduce 12
	DIV  reduce 12
	ENDEXPR  reduce 12
	REFLET  reduce 12
	REF  reduce 12
	OR  reduce 12
	AND  reduce 12
	SGT  reduce 12
	GT  reduce 12
	SLT  reduce 12
	LT  reduce 12
	NEQUAL  reduce 12
	CONSTRUCTOR  reduce 12
	UNDERSCORE  reduce 12
	SEQ  reduce 12
	TRUE  reduce 12
	FALSE  reduce 12
	LISTINSERT  reduce 12
	RBRACKET  reduce 12
	LBRACKET  reduce 12
	INFIX_OP_0  reduce 12
	INFIX_OP_1  reduce 12
	INFIX_OP_2  reduce 12
	INFIX_OP_3  reduce 12
	INFIX_OP_4  reduce 12
	INFIX_OP_REF  reduce 12
	DISJ  reduce 12


state 34
	atoms : int_atom .  (13)

	.  reduce 13


state 35
	expr_atom : atoms .  (42)

	.  reduce 42


state 36
	funccall : expr_atom .  (50)

	.  reduce 50


state 37
	expr_atom : array_type .  (44)
	prog : array_type . ARRAYAFFECTATION prog  (97)

	ARRAYAFFECTATION  shift 97
	INT  reduce 44
	IDENT  reduce 44
	LPAREN  reduce 44
	RPAREN  reduce 44
	END  reduce 44
	ELSE  reduce 44
	THEN  reduce 44
	IN  reduce 44
	COMMA  reduce 44
	WITH  reduce 44
	PLUS  reduce 44
	TIMES  reduce 44
	MINUS  reduce 44
	EQUAL  reduce 44
	DIV  reduce 44
	ENDEXPR  reduce 44
	REFLET  reduce 44
	REF  reduce 44
	OR  reduce 44
	AND  reduce 44
	SGT  reduce 44
	GT  reduce 44
	SLT  reduce 44
	LT  reduce 44
	NEQUAL  reduce 44
	CONSTRUCTOR  reduce 44
	UNDERSCORE  reduce 44
	SEQ  reduce 44
	TRUE  reduce 44
	FALSE  reduce 44
	LISTINSERT  reduce 44
	LBRACKET  reduce 44
	INFIX_OP_0  reduce 44
	INFIX_OP_1  reduce 44
	INFIX_OP_2  reduce 44
	INFIX_OP_3  reduce 44
	INFIX_OP_4  reduce 44
	INFIX_OP_REF  reduce 44
	DISJ  reduce 44


state 38
	arithmetics_expr : prog . PLUS prog  (58)
	arithmetics_expr : prog . TIMES prog  (59)
	arithmetics_expr : prog . DIV prog  (60)
	arithmetics_expr : prog . MINUS prog  (61)
	arithmetics_expr : prog . OR prog  (62)
	arithmetics_expr : prog . AND prog  (63)
	arithmetics_expr : prog . SLT prog  (64)
	arithmetics_expr : prog . LT prog  (65)
	arithmetics_expr : prog . SGT prog  (66)
	arithmetics_expr : prog . GT prog  (67)
	arithmetics_expr : prog . NEQUAL prog  (69)
	arithmetics_expr : prog . EQUAL prog  (70)
	arithmetics_expr : prog . INFIX_OP_4 prog  (71)
	arithmetics_expr : prog . INFIX_OP_3 prog  (72)
	arithmetics_expr : prog . INFIX_OP_REF prog  (73)
	arithmetics_expr : prog . INFIX_OP_2 prog  (74)
	arithmetics_expr : prog . INFIX_OP_1 prog  (75)
	arithmetics_expr : prog . INFIX_OP_0 prog  (76)
	arithmetics_expr : prog . LISTINSERT prog  (77)
	seq_list : prog .  (78)
	seq_list : prog . SEQ seq_list  (79)
	prog : prog . REFLET prog  (90)
	tuple : prog . COMMA prog  (103)

	COMMA  shift 98
	PLUS  shift 99
	TIMES  shift 100
	MINUS  shift 101
	EQUAL  shift 102
	DIV  shift 103
	REFLET  shift 104
	OR  shift 105
	AND  shift 106
	SGT  shift 107
	GT  shift 108
	SLT  shift 109
	LT  shift 110
	NEQUAL  shift 111
	SEQ  shift 112
	LISTINSERT  shift 113
	INFIX_OP_0  shift 114
	INFIX_OP_1  shift 115
	INFIX_OP_2  shift 116
	INFIX_OP_3  shift 117
	INFIX_OP_4  shift 118
	INFIX_OP_REF  shift 119
	RPAREN  reduce 78
	END  reduce 78
	ELSE  reduce 78
	THEN  reduce 78
	IN  reduce 78
	WITH  reduce 78
	ENDEXPR  reduce 78
	DISJ  reduce 78


state 39
	funccall : funccall . expr_atom  (51)
	prog : funccall .  (95)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	REF  shift 13
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	LBRACKET  shift 26
	RPAREN  reduce 95
	END  reduce 95
	ELSE  reduce 95
	THEN  reduce 95
	IN  reduce 95
	COMMA  reduce 95
	WITH  reduce 95
	PLUS  reduce 95
	TIMES  reduce 95
	MINUS  reduce 95
	EQUAL  reduce 95
	DIV  reduce 95
	ENDEXPR  reduce 95
	REFLET  reduce 95
	OR  reduce 95
	AND  reduce 95
	SGT  reduce 95
	GT  reduce 95
	SLT  reduce 95
	LT  reduce 95
	NEQUAL  reduce 95
	SEQ  reduce 95
	LISTINSERT  reduce 95
	INFIX_OP_0  reduce 95
	INFIX_OP_1  reduce 95
	INFIX_OP_2  reduce 95
	INFIX_OP_3  reduce 95
	INFIX_OP_4  reduce 95
	INFIX_OP_REF  reduce 95
	DISJ  reduce 95

	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 120
	array_type  goto 75


state 40
	prog : arithmetics_expr .  (80)

	.  reduce 80


state 41
	prog : tuple .  (96)
	tuple : tuple . COMMA prog  (104)

	COMMA  shift 121
	RPAREN  reduce 96
	END  reduce 96
	ELSE  reduce 96
	THEN  reduce 96
	IN  reduce 96
	WITH  reduce 96
	PLUS  reduce 96
	TIMES  reduce 96
	MINUS  reduce 96
	EQUAL  reduce 96
	DIV  reduce 96
	ENDEXPR  reduce 96
	REFLET  reduce 96
	OR  reduce 96
	AND  reduce 96
	SGT  reduce 96
	GT  reduce 96
	SLT  reduce 96
	LT  reduce 96
	NEQUAL  reduce 96
	SEQ  reduce 96
	LISTINSERT  reduce 96
	INFIX_OP_0  reduce 96
	INFIX_OP_1  reduce 96
	INFIX_OP_2  reduce 96
	INFIX_OP_3  reduce 96
	INFIX_OP_4  reduce 96
	INFIX_OP_REF  reduce 96
	DISJ  reduce 96


state 42
	atoms : LPAREN RPAREN .  (11)

	.  reduce 11


state 43
	operators_name : INFIX_OP_0 .  (21)

	.  reduce 21


state 44
	operators_name : INFIX_OP_1 .  (22)

	.  reduce 22


state 45
	operators_name : INFIX_OP_2 .  (23)

	.  reduce 23


state 46
	operators_name : INFIX_OP_3 .  (24)

	.  reduce 24


state 47
	operators_name : INFIX_OP_4 .  (25)

	.  reduce 25


state 48
	operators_name : INFIX_OP_REF .  (20)

	.  reduce 20


state 49
	operators_name : PREFIX_OP .  (19)
	prog : PREFIX_OP . prog  (94)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	BEGIN  shift 6
	LET  shift 7
	IF  shift 8
	FUN  shift 9
	TRY  shift 10
	MINUS  shift 11
	REF  shift 13
	RAISE  shift 15
	BANG  shift 16
	NOT  shift 17
	PRINTIN  shift 18
	AMAKE  shift 19
	CONSTRUCTOR  shift 20
	UNDERSCORE  shift 21
	TRUE  shift 22
	FALSE  shift 23
	MATCH  shift 25
	LBRACKET  shift 26
	PREFIX_OP  shift 27
	RPAREN  reduce 19

	let_defs  goto 50
	identifier  goto 33
	int_atom  goto 34
	atoms  goto 35
	expr_atom  goto 36
	array_type  goto 37
	prog  goto 86
	funccall  goto 39
	arithmetics_expr  goto 40
	tuple  goto 41


state 50
	prog : let_defs . IN seq_list  (84)

	IN  shift 92
	.  error


state 51
	identifier : LPAREN operators_name . RPAREN  (8)

	RPAREN  shift 122
	.  error


state 52
	atoms : LPAREN atoms . COLON types_tuple RPAREN  (18)
	expr_atom : atoms .  (42)

	COLON  shift 123
	INT  reduce 42
	IDENT  reduce 42
	LPAREN  reduce 42
	RPAREN  reduce 42
	COMMA  reduce 42
	PLUS  reduce 42
	TIMES  reduce 42
	MINUS  reduce 42
	EQUAL  reduce 42
	DIV  reduce 42
	REFLET  reduce 42
	REF  reduce 42
	OR  reduce 42
	AND  reduce 42
	SGT  reduce 42
	GT  reduce 42
	SLT  reduce 42
	LT  reduce 42
	NEQUAL  reduce 42
	CONSTRUCTOR  reduce 42
	UNDERSCORE  reduce 42
	SEQ  reduce 42
	TRUE  reduce 42
	FALSE  reduce 42
	LISTINSERT  reduce 42
	LBRACKET  reduce 42
	INFIX_OP_0  reduce 42
	INFIX_OP_1  reduce 42
	INFIX_OP_2  reduce 42
	INFIX_OP_3  reduce 42
	INFIX_OP_4  reduce 42
	INFIX_OP_REF  reduce 42

